Trying to fix image alignment (again…).

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,9 @@ h2 {
 
 .postcontent_stupeur > p > img {
   width: 80vw;
-  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .arrowImg {
